[project]
name = "ai-lead-gen"
version = "0.1.0"
description = "AI Lead Intelligence Agent — autonomous B2B lead discovery and outreach platform"
requires-python = ">=3.11"
dependencies = [
    # web
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # validation & settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # logging & monitoring
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=1.43.0",

    # http client
    "httpx>=0.27.0",

    # ai
    "openai>=1.14.0",

    # email
    "sendgrid>=6.11.0",

    # task queue & scheduling
    "arq>=0.25.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.4",

    # rate limiting
    "slowapi>=0.1.9",

    # utils
    "aiofiles>=23.2.1",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
